--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,10 @@
   		<artifactId>joda-convert</artifactId>
   		<version>1.3.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>net.sf.jchart2d</groupId>
+  		<artifactId>jchart2d</artifactId>
+  		<version>3.3.2</version>
+  	</dependency>
   </dependencies>
 </project>
