--- a/pom.xml
+++ b/pom.xml
@@ -20,17 +20,6 @@
   		<version>2.2</version>
   	</dependency>
   	<dependency>
-  		<groupId>com.typesafe.akka</groupId>
-  		<artifactId>akka-actor_2.10</artifactId>
-  		<version>2.1.4</version>
-  		<exclusions>
-  			<exclusion>
-  				<artifactId>scala-library</artifactId>
-  				<groupId>org.scala-lang</groupId>
-  			</exclusion>
-  		</exclusions>
-  	</dependency>
-  	<dependency>
   		<groupId>org.joda</groupId>
   		<artifactId>joda-convert</artifactId>
   		<version>1.3.1</version>
@@ -39,6 +28,11 @@
   		<groupId>net.sf.jchart2d</groupId>
   		<artifactId>jchart2d</artifactId>
   		<version>3.3.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.lmax</groupId>
+  		<artifactId>disruptor</artifactId>
+  		<version>3.0.1</version>
   	</dependency>
   </dependencies>
 </project>
