--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,16 @@
   		<version>4.11</version>
   		<scope>test</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>com.typesafe.akka</groupId>
+  		<artifactId>akka-actor_2.10</artifactId>
+  		<version>2.1.4</version>
+  		<exclusions>
+  			<exclusion>
+  				<artifactId>scala-library</artifactId>
+  				<groupId>org.scala-lang</groupId>
+  			</exclusion>
+  		</exclusions>
+  	</dependency>
   </dependencies>
 </project>
