lots of moving around (including moving everything over to the scala folder...) added a benchmarker but it doesn't really do anything and we need to determine if this is even necessary and if it is even appropriate at the MarketManager level

--- a/pom.xml
+++ b/pom.xml
@@ -1,55 +1,87 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>thc.sandbox</groupId>
-  <artifactId>market-player</artifactId>
-  <version>0.0.1</version>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.ib</groupId>
-  		<artifactId>ib-client</artifactId>
-  		<version>9.68</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>thc.sandbox</groupId>
-  		<artifactId>slf4s</artifactId>
-  		<version>1.0.0</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>joda-time</groupId>
-  		<artifactId>joda-time</artifactId>
-  		<version>2.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.joda</groupId>
-  		<artifactId>joda-convert</artifactId>
-  		<version>1.3.1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>net.sf.jchart2d</groupId>
-  		<artifactId>jchart2d</artifactId>
-  		<version>3.3.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.lmax</groupId>
-  		<artifactId>disruptor</artifactId>
-  		<version>3.0.1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.11</version>
-  		<scope>test</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.typesafe.akka</groupId>
-  		<artifactId>akka-actor_2.10</artifactId>
-  		<version>2.1.4</version>
-  		<exclusions>
-  			<exclusion>
-  				<artifactId>scala-library</artifactId>
-  				<groupId>org.scala-lang</groupId>
-  			</exclusion>
-  		</exclusions>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>thc.sandbox</groupId>
+	<artifactId>market-player</artifactId>
+	<version>0.0.1</version>
+	
+	<dependencies>
+		<dependency>
+			<groupId>com.ib</groupId>
+			<artifactId>ib-client</artifactId>
+			<version>9.68</version>
+		</dependency>
+		<dependency>
+			<groupId>thc.sandbox</groupId>
+			<artifactId>slf4s</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.joda</groupId>
+			<artifactId>joda-convert</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.jchart2d</groupId>
+			<artifactId>jchart2d</artifactId>
+			<version>3.3.2</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>jide-oss</artifactId>
+					<groupId>com.jidesoft</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.lmax</groupId>
+			<artifactId>disruptor</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-actor_2.10</artifactId>
+			<version>2.1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.10.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-swing</artifactId>
+			<version>2.10.1</version>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<sourceDirectory>src/main/scala</sourceDirectory>
+		<testSourceDirectory>src/test/scala</testSourceDirectory>
+		<plugins>
+			<plugin>
+				<groupId>net.alchim31.maven</groupId>
+				<artifactId>scala-maven-plugin</artifactId>
+				<version>3.1.5</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>testCompile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
